Fix button/pill alignment issue within submission headers

--- a/src/containers/Bounty/components/listItems/SubmissionItem.module.scss
+++ b/src/containers/Bounty/components/listItems/SubmissionItem.module.scss
@@ -40,10 +40,12 @@
 }
 
 .actionContainer {
-}
+  display: flex;
+  align-items: center;
 
-.actionButton {
-  margin-left: $base-spacing;
+  & > * {
+    margin-left: $m-spacing;
+  }
 }
 
 .detailsContainer {
